apps/base/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:2.42.3
          command: ["/bin/sh"]
          args: ["-c", "sleep 5; n8n start"]
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 2.0Gi
          volumeMounts:
            - name: n8n-pvc-longhorn
              mountPath: /home/node/.n8n
            - name: n8n-binary-data
              mountPath: /home/node/.n8n/binaryData
      restartPolicy: Always
      volumes:
        - name: n8n-pvc-longhorn
          persistentVolumeClaim:
            claimName: n8n-pvc-longhorn-bk
        - name: n8n-binary-data
          emptyDir:
            sizeLimit: 5Gi
