apps/base/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
