apps/base/n8n/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.ysonsbaolab.dev`)
      kind: Rule
      services:
        - name: n8n-service
          port: 5678
  tls:
    secretName: n8n-certificate-secret
